--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -61,8 +61,13 @@
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9213 8.53324L5.84805 14.6065C5.55514 14.8994 5.08027 14.8994 4.78739 14.6065L4.07905 13.8981C3.78664 13.6057 3.78608 13.1318 4.0778 12.8387L8.89095 8.0029L4.0778 3.16712C3.78608 2.87402 3.78664 2.40012 4.07905 2.10771L4.78739 1.39937C5.0803 1.10646 5.55517 1.10646 5.84805 1.39937L11.9213 7.47259C12.2142 7.76546 12.2142 8.24034 11.9213 8.53324Z' fill='%23000'/%3E%3C/svg%3E");
 		}
 	}
+	.button-chev-red {
+		@apply text-12 pl-20 pt-[3px]  top-[2px] left-2 relative transition-all duration-300 bg-no-repeat;
+		content: " ";
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9211 8.53129L5.8478 14.6045C5.5549 14.8974 5.08002 14.8974 4.78715 14.6045L4.0788 13.8962C3.7864 13.6038 3.78583 13.1299 4.07755 12.8368L8.89071 8.00095L4.07755 3.16516C3.78583 2.87207 3.7864 2.39816 4.0788 2.10576L4.78715 1.39741C5.08005 1.10451 5.55493 1.10451 5.8478 1.39741L11.921 7.47063C12.2139 7.76351 12.2139 8.23838 11.9211 8.53129Z' fill='%23930027'/%3E%3C/svg%3E");
+	}
 	.headline-main {
-		@apply text-secondary text-center font-700 font-primary mb-10;
+		@apply text-secondary text-center font-700 font-primary mb-10 leading-[114%];
 		font-size: clamp(1.75rem, -0.3833rem + 5.3333vw, 2.75rem);
 	}
 	.more-open {
