--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 
 @import "./glightbox.min.css";
 @import "./jquery.modal.min.css";
+@import "./flickity.min.css";
 /* @import "./plyr.min.css"; */
 
 @import "components.css";
