--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -137,6 +137,20 @@
 		content: " ";
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9211 8.53129L5.8478 14.6045C5.5549 14.8974 5.08002 14.8974 4.78715 14.6045L4.0788 13.8962C3.7864 13.6038 3.78583 13.1299 4.07755 12.8368L8.89071 8.00095L4.07755 3.16516C3.78583 2.87207 3.7864 2.39816 4.0788 2.10576L4.78715 1.39741C5.08005 1.10451 5.55493 1.10451 5.8478 1.39741L11.921 7.47063C12.2139 7.76351 12.2139 8.23838 11.9211 8.53129Z' fill='%23930027'/%3E%3C/svg%3E");
 }
+	.button-chev-blue {
+		position: relative;
+		top: 2px;
+		left: 0.5rem;
+		background-repeat: no-repeat;
+		padding-left: 1.25rem;
+		padding-top: 3px;
+		font-size: 0.75rem;
+		transition-property: all;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		transition-duration: 300ms;
+		content: " ";
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='14' viewBox='0 0 10 14' fill='none'%3E%3Cpath d='M8.92105 7.53129L2.8478 13.6045C2.5549 13.8974 2.08002 13.8974 1.78715 13.6045L1.0788 12.8962C0.786397 12.6038 0.785835 12.1299 1.07755 11.8368L5.89071 7.00095L1.07755 2.16516C0.785835 1.87207 0.786397 1.39816 1.0788 1.10576L1.78715 0.397414C2.08005 0.104508 2.55493 0.104508 2.8478 0.397414L8.92102 6.47063C9.21393 6.76351 9.21393 7.23838 8.92105 7.53129Z' fill='%2315636E'/%3E%3C/svg%3E");
+}
 	.headline-main {
 		margin-bottom: .625rem;
 		text-align: center;
@@ -237,9 +251,6 @@
 .right-\[-35px\] {
 		right: -35px;
 }
-.right-\[-7px\] {
-		right: -7px;
-}
 .right-\[2\%\] {
 		right: 2%;
 }
@@ -260,9 +271,6 @@
 }
 .z-\[1\] {
 		z-index: 1;
-}
-.m-8 {
-		margin: 0.5rem;
 }
 .mx-auto {
 		margin-left: auto;
@@ -304,9 +312,6 @@
 }
 .mb-50 {
 		margin-bottom: 3.125rem;
-}
-.mb-8 {
-		margin-bottom: 0.5rem;
 }
 .ml-10 {
 		margin-left: .625rem;
@@ -368,9 +373,6 @@
 .hidden {
 		display: none;
 }
-.h-1 {
-		height: 0.25rem;
-}
 .h-6 {
 		height: 1.5rem;
 }
@@ -409,9 +411,6 @@
 }
 .w-1\/2 {
 		width: 50%;
-}
-.w-16 {
-		width: 4rem;
 }
 .w-6 {
 		width: 1.5rem;
@@ -470,12 +469,6 @@
 .max-w-\[540px\] {
 		max-width: 540px;
 }
-.max-w-screen-xxl {
-		max-width: 1320px;
-}
-.max-w-sm {
-		max-width: 24rem;
-}
 .flex-1 {
 		flex: 1 1 0%;
 }
@@ -500,8 +493,8 @@
 .grid-cols-1 {
 		grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.grid-cols-3 {
-		grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .flex-col {
 		flex-direction: column;
@@ -533,6 +526,16 @@
 .gap-\[2\%\] {
 		gap: 2%;
 }
+.gap-x-4 {
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
+}
+.gap-y-4 {
+		row-gap: 1rem;
+}
+.gap-y-8 {
+		row-gap: 2rem;
+}
 .overflow-clip {
 		overflow: clip;
 }
@@ -544,6 +547,9 @@
 }
 .rounded-lg {
 		border-radius: 0.5rem;
+}
+.rounded-none {
+		border-radius: 0px;
 }
 .border {
 		border-width: 1px;
@@ -572,10 +578,6 @@
 .border-gray-300 {
 		--tw-border-opacity: 1;
 		border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.border-primary {
-		--tw-border-opacity: 1;
-		border-color: rgb(147 0 39 / var(--tw-border-opacity));
 }
 .border-opacity-0 {
 		--tw-border-opacity: 0;
@@ -624,6 +626,10 @@
 }
 .fill-primary {
 		fill: #930027;
+}
+.object-cover {
+		-o-object-fit: cover;
+		   object-fit: cover;
 }
 .p-10 {
 		padding: .625rem;
@@ -732,9 +738,6 @@
 .text-28 {
 		font-size: 28px;
 }
-.text-2xl {
-		font-size: 2rem;
-}
 .text-32 {
 		font-size: 2rem;
 }
@@ -798,10 +801,6 @@
 .text-gray-600 {
 		--tw-text-opacity: 1;
 		color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-gray-800 {
-		--tw-text-opacity: 1;
-		color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .text-gray-900 {
 		--tw-text-opacity: 1;
@@ -921,38 +920,62 @@
 	overflow: hidden;
 	top: -10px;
 }
-.entry-content ul, .block-editor-block-list__layout ul, .entry-content .acf-wysiwyg ul, .mce-content-body ul {
+input[type="search"] {
+	-webkit-appearance: none;
+	border-radius: 0;
+}
+input[type="search"]:focus {
+		outline: none;
+	}
+input[type="search"]::-ms-clear {
+	display: none;
+	width: 0;
+	height: 0;
+}
+input[type="search"]::-ms-reveal {
+	display: none;
+	width: 0;
+	height: 0;
+}
+/* clears the ‘X’ from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+	display: none;
+}
+.entry-content ul, .block-editor-block-list__layout ul, .acf-wysiwyg ul, .mce-content-body ul {
 		margin-left: 1.875rem;
 		margin-top: .9375rem;
 }
-.entry-content li, .block-editor-block-list__layout li, .entry-content .acf-wysiwyg li, .mce-content-body li {
+.entry-content li, .block-editor-block-list__layout li, .acf-wysiwyg li, .mce-content-body li {
 		margin-bottom: .625rem;
 		list-style-type: disc;
 		font-size: .9375rem;
 }
 @media (min-width: 768px) {
-		.entry-content li, .block-editor-block-list__layout li, .entry-content .acf-wysiwyg li, .mce-content-body li {
+		.entry-content li, .block-editor-block-list__layout li, .acf-wysiwyg li, .mce-content-body li {
 				font-size: 1rem;
 		}
 }
-.entry-content .has-red-text, .block-editor-block-list__layout .has-red-text, .entry-content .acf-wysiwyg .has-red-text, .mce-content-body .has-red-text {
+.entry-content .has-red-text, .block-editor-block-list__layout .has-red-text, .acf-wysiwyg .has-red-text, .mce-content-body .has-red-text {
 		--tw-text-opacity: 1;
 		color: rgb(147 0 39 / var(--tw-text-opacity));
 }
-.entry-content p, .block-editor-block-list__layout p, .entry-content .acf-wysiwyg p, .mce-content-body p {
+.entry-content p, .block-editor-block-list__layout p, .acf-wysiwyg p, .mce-content-body p {
 		margin-bottom: .9375rem;
 		font-size: .9375rem;
 }
 @media (min-width: 768px) {
-		.entry-content p, .block-editor-block-list__layout p, .entry-content .acf-wysiwyg p, .mce-content-body p {
+		.entry-content p, .block-editor-block-list__layout p, .acf-wysiwyg p, .mce-content-body p {
 				font-size: 1rem;
 		}
 }
-.entry-content p.has-blue-text, .block-editor-block-list__layout p.has-blue-text, .entry-content .acf-wysiwyg p.has-blue-text, .mce-content-body p.has-blue-text {
+.entry-content p.has-blue-text, .block-editor-block-list__layout p.has-blue-text, .acf-wysiwyg p.has-blue-text, .mce-content-body p.has-blue-text {
 		--tw-text-opacity: 1;
 		color: rgb(21 99 110 / var(--tw-text-opacity));
 }
-.entry-content p:last-of-type, .block-editor-block-list__layout p:last-of-type, .entry-content .acf-wysiwyg p:last-of-type, .mce-content-body p:last-of-type {
+.entry-content p:last-of-type, .block-editor-block-list__layout p:last-of-type, .acf-wysiwyg p:last-of-type, .mce-content-body p:last-of-type {
 		margin-bottom: 0;
 }
 /* @apply container  mx-auto  xl:max-w-screen-xl; */
@@ -1366,6 +1389,20 @@
 .entry-content .image-pathways + .image-pathways, .block-editor-block-list__layout .image-pathways + .image-pathways {
 		margin-top: -60px;
 }
+.entry-content .image-pathways--bg-offwhite, .block-editor-block-list__layout .image-pathways--bg-offwhite {
+		margin-top: 0;
+		margin-bottom: 0;
+		--tw-bg-opacity: 1;
+		background-color: rgb(228 238 238 / var(--tw-bg-opacity));
+		padding-top: 3.125rem;
+		padding-bottom: 3.125rem;
+}
+@media (min-width: 768px) {
+		.entry-content .image-pathways--bg-offwhite, .block-editor-block-list__layout .image-pathways--bg-offwhite {
+				padding-top: 5.625rem;
+				padding-bottom: 5.625rem;
+		}
+}
 .entry-content .image-pathways__grid, .block-editor-block-list__layout .image-pathways__grid {
 		display: grid;
 		grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -1380,6 +1417,20 @@
 		.entry-content .image-pathways__grid, .block-editor-block-list__layout .image-pathways__grid {
 				-moz-column-gap: 5rem;
 				     column-gap: 5rem;
+		}
+}
+.entry-content .image-pathways__grid--careers, .block-editor-block-list__layout .image-pathways__grid--careers {
+		row-gap: 1rem;
+}
+@media (min-width: 768px) {
+		.entry-content .image-pathways__grid--careers, .block-editor-block-list__layout .image-pathways__grid--careers {
+				row-gap: 4rem;
+		}
+}
+@media (min-width: 1150px) {
+		.entry-content .image-pathways__grid--careers, .block-editor-block-list__layout .image-pathways__grid--careers {
+				-moz-column-gap: 3rem;
+				     column-gap: 3rem;
 		}
 }
 .entry-content .image-pathways__grid--count-3 > *, .block-editor-block-list__layout .image-pathways__grid--count-3 > * {
@@ -1415,13 +1466,19 @@
 		flex-direction: column;
 		justify-content: space-between;
 }
-.entry-content .image-pathways__item--0, .block-editor-block-list__layout .image-pathways__item--0 {
-			}
 .entry-content .image-pathways__img, .block-editor-block-list__layout .image-pathways__img {
 		margin-left: auto;
 		margin-right: auto;
 		margin-bottom: 1.875rem;
 		border-radius: 9999px;
+}
+.entry-content .image-pathways__img--careers, .block-editor-block-list__layout .image-pathways__img--careers {
+		margin-bottom: .625rem;
+		width: 100%;
+		border-radius: 0px;
+		-o-object-fit: cover;
+		   object-fit: cover;
+				aspect-ratio: 380 / 240;
 }
 .entry-content .image-pathways__main-headline, .block-editor-block-list__layout .image-pathways__main-headline {
 			/* @apply text-44 font-700  text-center mb-30 font-primary; */
@@ -1435,6 +1492,10 @@
 		--tw-text-opacity: 1;
 		color: rgb(147 0 39 / var(--tw-text-opacity));
 		}
+.entry-content .image-pathways__main-headline--text-secondary, .block-editor-block-list__layout .image-pathways__main-headline--text-secondary {
+		--tw-text-opacity: 1;
+		color: rgb(21 99 110 / var(--tw-text-opacity));
+}
 .entry-content .image-pathways__main-content, .block-editor-block-list__layout .image-pathways__main-content {
 		margin-left: auto;
 		margin-right: auto;
@@ -1449,6 +1510,14 @@
 				font-size: 1.125rem;
 		}
 }
+.entry-content .image-pathways__main-content p, .block-editor-block-list__layout .image-pathways__main-content p {
+		font-size: .9375rem;
+}
+@media (min-width: 768px) {
+		.entry-content .image-pathways__main-content p, .block-editor-block-list__layout .image-pathways__main-content p {
+				font-size: 1.125rem;
+		}
+}
 .entry-content .image-pathways__content, .block-editor-block-list__layout .image-pathways__content {
 		margin-left: auto;
 		margin-right: auto;
@@ -1459,6 +1528,14 @@
 		.entry-content .image-pathways__content, .block-editor-block-list__layout .image-pathways__content {
 				font-size: .9375rem;
 		}
+}
+.entry-content .image-pathways__content--careers, .block-editor-block-list__layout .image-pathways__content--careers {
+		max-width: 100%;
+}
+.entry-content .image-pathways__content--careers p, .block-editor-block-list__layout .image-pathways__content--careers p {
+		margin-bottom: .625rem;
+		--tw-text-opacity: 1;
+		color: rgb(72 80 80 / var(--tw-text-opacity));
 }
 .entry-content .image-pathways__headline, .block-editor-block-list__layout .image-pathways__headline {
 		margin-bottom: 0;
@@ -2332,10 +2409,20 @@
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 1133px;
-		grid-template-columns: repeat(3, minmax(0, 1fr));
-		gap: 5rem;
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+		row-gap: 2rem;
+		-moz-column-gap: 1rem;
+		     column-gap: 1rem;
+}
+@media (min-width: 768px) {
+		.entry-content .checkmark-list__grid--3col, .block-editor-block-list__layout .checkmark-list__grid--3col {
+				grid-template-columns: repeat(3, minmax(0, 1fr));
+				gap: 5rem;
+		}
 }
 .entry-content .checkmark-list__grid--3col svg, .block-editor-block-list__layout .checkmark-list__grid--3col svg {
+		height: auto;
+		flex-shrink: 0;
 		fill: #930027;
 }
 .entry-content .checkmark-list__grid--3col .checkmark-list__title, .block-editor-block-list__layout .checkmark-list__grid--3col .checkmark-list__title {
@@ -2608,7 +2695,7 @@
 		line-height: 28px;
 }
 .entry-content .cta-block__headline, .block-editor-block-list__layout .cta-block__headline {
-		margin-bottom: .3125rem;
+		margin-bottom: .625rem;
 		font-family: trade-gothic-next, helvetica, sans-serif;
 		font-size: 2rem;
 		font-weight: 700;
@@ -3354,10 +3441,10 @@
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 		transition-duration: 300ms;
 		content: " ";
-		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M11.9211 8.53129L5.8478 14.6045C5.5549 14.8974 5.08002 14.8974 4.78715 14.6045L4.0788 13.8962C3.7864 13.6038 3.78583 13.1299 4.07755 12.8368L8.89071 8.00095L4.07755 3.16516C3.78583 2.87207 3.7864 2.39816 4.0788 2.10576L4.78715 1.39741C5.08005 1.10451 5.55493 1.10451 5.8478 1.39741L11.921 7.47063C12.2139 7.76351 12.2139 8.23838 11.9211 8.53129Z' fill='%23930027'/%3E%3C/svg%3E");
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='14' viewBox='0 0 10 14' fill='none'%3E%3Cpath d='M8.92105 7.53129L2.8478 13.6045C2.5549 13.8974 2.08002 13.8974 1.78715 13.6045L1.0788 12.8962C0.786397 12.6038 0.785835 12.1299 1.07755 11.8368L5.89071 7.00095L1.07755 2.16516C0.785835 1.87207 0.786397 1.39816 1.0788 1.10576L1.78715 0.397414C2.08005 0.104508 2.55493 0.104508 2.8478 0.397414L8.92102 6.47063C9.21393 6.76351 9.21393 7.23838 8.92105 7.53129Z' fill='%2315636E'/%3E%3C/svg%3E");
 }
 .entry-content .featured-rates__view-all a:hover::after, .block-editor-block-list__layout .featured-rates__view-all a:hover::after {
-		right: -7px;
+		left: 0.75rem;
 }
 .entry-content .featured-rates__link, .block-editor-block-list__layout .featured-rates__link {
 		position: relative;
@@ -3474,16 +3561,6 @@ body {
 }
 .wp-block[data-align="full"] {
 		max-width: 100%;
-}
-.editor-styles-wrapper
-	.edit-post-visual-editor__post-title-wrapper
-	> :where(:not(.alignleft):not(.alignright):not(.alignfull)),
-.editor-styles-wrapper
-	.block-editor-block-list__layout.is-root-container
-	> :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
-		max-width: 1320px !important;
-	margin-left: auto !important;
-	margin-right: auto !important;
 }
 @media not all and (min-width: 1320px) {
 		.max-xxl\:container {
@@ -3818,9 +3895,6 @@ body {
 		.md\:mb-60 {
 				margin-bottom: 3.75rem;
 		}
-		.md\:flex {
-				display: flex;
-		}
 		.md\:h-\[115px\] {
 				height: 115px;
 		}
@@ -3966,6 +4040,10 @@ body {
 		}
 		.xl\:gap-16 {
 				gap: 4rem;
+		}
+		.xl\:gap-x-12 {
+				-moz-column-gap: 3rem;
+				     column-gap: 3rem;
 		}
 		.xl\:text-40 {
 				font-size: 2.5rem;
