--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -107,7 +107,7 @@
 }
 	.button-main:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 		.button-main--chev {
 		position: relative;
@@ -399,6 +399,9 @@
 }
 .h-auto {
 		height: auto;
+}
+.h-full {
+		height: 100%;
 }
 .max-h-\[1500px\] {
 		max-height: 1500px;
@@ -1567,7 +1570,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .image-pathways__link:hover, .block-editor-block-list__layout .image-pathways__link:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .image-pathways__link, .block-editor-block-list__layout .image-pathways__link {
 		display: block;
@@ -1702,7 +1705,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .application-status__link:hover, .block-editor-block-list__layout .application-status__link:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .application-status__link, .block-editor-block-list__layout .application-status__link {
 		width: 100%;
@@ -2337,7 +2340,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .comparison__button:hover, .block-editor-block-list__layout .comparison__button:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .comparison__button, .block-editor-block-list__layout .comparison__button {
 		margin-left: auto;
@@ -2722,7 +2725,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .cta-block__link:hover, .block-editor-block-list__layout .cta-block__link:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .cta-block__link, .block-editor-block-list__layout .cta-block__link {
 		--tw-bg-opacity: 1;
@@ -2915,7 +2918,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .simple-table__button:hover, .block-editor-block-list__layout .simple-table__button:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .simple-table__button, .block-editor-block-list__layout .simple-table__button {
 		display: block;
@@ -3049,7 +3052,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 .entry-content .checkerboard__link:hover, .block-editor-block-list__layout .checkerboard__link:hover {
 		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
 }
 .entry-content .checkerboard__link, .block-editor-block-list__layout .checkerboard__link {
 		width: 66%;
@@ -3756,13 +3759,13 @@ body {
 .hover\:border-opacity-100:hover {
 		--tw-border-opacity: 1;
 }
+.hover\:bg-primary:hover {
+		--tw-bg-opacity: 1;
+		background-color: rgb(147 0 39 / var(--tw-bg-opacity));
+}
 .hover\:bg-secondary:hover {
 		--tw-bg-opacity: 1;
 		background-color: rgb(21 99 110 / var(--tw-bg-opacity));
-}
-.hover\:bg-secondaryDark:hover {
-		--tw-bg-opacity: 1;
-		background-color: rgb(12 87 95 / var(--tw-bg-opacity));
 }
 .hover\:text-primary:hover {
 		--tw-text-opacity: 1;
